--- a/src/assets/locales/pa.json
+++ b/src/assets/locales/pa.json
@@ -236,7 +236,7 @@
           "title": "ਕਸਟਮ ਪ੍ਰੌਕਸੀ"
         }
       },
-      "title": "ਚਲੋ ਤੁਹਾਨੂੰ movie-web ਨਾਲ ਸੈੱਟਅੱਪ ਕਰਵਾਉਂਦੇ ਹਾਂ"
+      "title": "ਚਲੋ ਤੁਹਾਨੂੰ kami-movie ਨਾਲ ਸੈੱਟਅੱਪ ਕਰਵਾਉਂਦੇ ਹਾਂ"
     }
   },
   "overlays": {
